# paperops

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEX.md  Makefile  README.md  examples.py  pyproject.toml
.claude/: settings.json
.claude/agents/: chart-maker.md  slide-designer.md  slide-reviewer.md
.github/workbuddy/: config.yaml
docs/: components_api.md  quickstart-slides.md
docs/design/: slide-dsl.md
examples/: __init__.py
examples/4.15-talk/: build.py  deck_refinement_plan.md  pptx_restructure.py  presentation.py  slide_spec.md  slide_visual_spec.md  talk_master.md  task_dependency_plan.md  visual_system.md
examples/communication_friction/: build.py  communication_friction.pptx
examples/fse26/: outline.md  presentation.py
examples/gallery/: gallery_content.json  render_gallery_variants.py
examples/poster/: poster.tex  posterstyle.sty
examples/rebuttal/: respletter.sty
examples/self-intro/: build.py  diagnostic_world_model.pptx
examples/self_intro/: __init__.py  build.py
src/paperops/: __init__.py
tests/components/: test_registry.py  test_semantic_expansion.py
tests/core/: test_theme_tokens.py
tests/docs/: test_slides_cutover.py
tests/dsl/: test_markdown_mdx_parsers.py  test_python_builder.py
tests/examples/: test_gallery_variants.py  test_ir_first_examples.py  test_self_intro_build.py
tests/ir/: test_defines.py  test_node.py  test_schema.py
tests/slides/: test_issue6_polish.py  test_issue_measurement_alignment.py  test_review_artifacts.py
tests/smoke/: minimal_deck.json  test_minimal_smoke.py
tests/style/: test_cascade.py  (+2 more)
(+126 files in other folders)
